--- a/templates/profil.html
+++ b/templates/profil.html
@@ -78,7 +78,231 @@
                     <!--Sidebar Naigation Menu-->
                 </div>
             </div>
+
+            <div class="col-sm-9 col-xs-12 content pt-3 pl-0">
+                <div class="row mt-3">
+                    <div class="col-sm-12">
+                        <!--User profile header-->
+                        <div class="mt-1 mb-3 button-container bg-white border shadow-sm">
+                            <div class="profile-bg p-5">
+                                <img src="{{ usr.Image_profil.url }}" height="125px" width="125px" class="rounded-circle shadow profile-img" />
+                            </div>
+                            <div class="profile-bio-main container-fluid">
+                                <div class="row">
+                                    <div class="col-md-5 offset-md-3 col-sm-12 offset-sm-0 col-12 bio-header">
+                                        <h3 class="mt-4">{{ usr.Nom }}{{ usr.Prenom }}</h3>
+                                        <span class="text-muted mt-0 bio-request">{{ usr.Profession }}</span>
+                                    </div>
+                                    <div class="col-md-4 col-sm-12 col-12 px-5 text-right pt-4 bio-comment">
+                                        <a href="#" class="btn btn-info">
+                                            <i class="far fa-comment"></i>  Message
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/User profile header-->
+                    </div>
+                </div>
+
+                <div class="row mt-3">
+                    <!--User profile sidebar-->
+                    <div class="col-sm-12 col-md-4">
+                        <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
+                            
+                            <div class="mb-3">
+                                <div class="row user-about">
+                                    <div class="col-sm-4 col-4 border-right text-center">
+                                        <h4>20</h4>
+                                        <p>Reviews</p>
+                                    </div>
+                                    <div class="col-sm-4 col-4 text-center">
+                                        <h4>31</h4>
+                                        <p>Clients</p>
+                                    </div>
+                                    <div class="col-sm-4 col-4 border-left text-center">
+                                        <h4>120</h4>
+                                        <p>Followers</p>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="dropdown-divider"></div>
+                            
+                            <div class="mb-3">
+                                <h6>Slogan</h6>
+                                <p class="p-typo">For awesome buildings and drawing plans, i am the best you can call on</p>
+                                <div class="text-right">
+                                    <button type="button" class="btn btn-theme">
+                                        <i class="fa fa-user-plus"></i> Follow
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                <!--User profile content-->
+                <div class="col-sm-12 col-md-8">
+                    <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm custom-tabs">
+                        
+                        <nav>
+                            <div class="nav nav-tabs nav-fill" id="nav-customContent" role="tablist">
+                                <a class="nav-item nav-link active" id="nav-home" data-toggle="tab" href="#custom-home" role="tab" aria-controls="nav-home" aria-selected="true">
+                                        <i class="fa fa-list-ul"></i> Publication
+                                </a>
+                                <a class="nav-item nav-link" id="nav-profile" data-toggle="tab" href="#custom-profile" role="tab" aria-controls="nav-profile" aria-selected="false">
+                                    <i class="fa fa-file-text-o"></i> Infos
+                                </a>
+                            </div>
+                        </nav>
+
+                        <div class="tab-content py-3 px-3 px-sm-0" id="nav-customContent">
+                            <div class="tab-pane fade show active p-4" id="custom-home" role="tabpanel" aria-labelledby="nav-home">
+                                
+                                <!--Single feed-->
+                                <div class="feed-single mb-3">
+                                    <div class="media">
+                                        <img class="mr-3 rounded-circle" height="40px" width="40px" src="{{ usr.Image_profil.url }}" alt="Generic placeholder image">
+                                        <div class="media-body">
+                                            <h6 class="mt-1">{{ usr.Nom }}{{ usr.Prenom }}
+                                                <small class="text-muted pl-2"><i class="fa fa-clock"></i> 10 hours</small>
+                                                <small class="text-muted small pull-right"><i>{{ usr.Profession }}</i> <i class="fa fa-bookmark-o pl-2"></i></small>
+
+                                                <p class="clearfix"></p>
+                                            </h6>
+                                            <p>New update on my existing projects #portfolio #architecture <a href="#" class="text-theme">www.github.io/architect-mendez</a></p>
+
+                                            <div class="feed-footer">
+                                                <span class="pr-3"><i class="fa fa-star"></i> 3</span>
+                                                <span class="pr-3"><i class="fa fa-comment"></i> 2</span>
+                                                <span class="pr-3"><i class="fa fa-share"></i></span>
+                                                <span class="pl-3 pull-right"><i class="fa fa-ellipsis-h"></i></span>
+
+                                                <p class="clearfix"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--/Single feed-->
+
+                                <div class="dropdown-divider"></div>
+
+                                <!--Single feed-->
+                                <div class="feed-single mt-3 mb-3">
+                                    <div class="media">
+                                        <img class="mr-3 rounded-circle" height="40px" width="40px" src="assets/img/John-doe.png">
+                                        <div class="media-body">
+                                            <h6 class="mt-1 mb-2">Mario Mendez 
+                                                <small class="text-muted  pl-2"><i class="fa fa-clock"></i> 3 days</small>
+                                                <small class="text-muted small pull-right"><i>sponsored</i> <i class="fa fa-bookmark-o  pl-2"></i></small>
+
+                                                <p class="clearfix"></p>
+                                            </h6>
+                                            
+                                            <div class="card shadow-sm">
+                                                <div><img class="card-img-top" src="assets/img/headphones.jpeg" alt="Card image cap"></div>
+                                                <div class="card-body">
+                                                    <h5 class="card-title mb-1">Architecture services</h5>
+                                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+                                                    <button type="button" class="btn btn-theme px-5 pull-right">HIRE</button>
+
+                                                    <p class="clearfix"></p>
+                                                </div>
+                                            </div>
+
+                                            <div class="feed-footer">
+                                                <span class="pr-3"><i class="fa fa-star"></i> 3</span>
+                                                <span class="pr-3"><i class="fa fa-comment"></i> 2</span>
+                                                <span class="pr-3"><i class="fa fa-share"></i></span>
+                                                <span class="pl-3 pull-right"><i class="fa fa-ellipsis-h"></i></span>
+
+                                                <p class="clearfix"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--/Single feed-->
+
+                                <div class="dropdown-divider"></div>
+
+                                <!--Single feed-->
+                                <div class="feed-single mt-3 mb-3">
+                                    <div class="media">
+                                        <img class="mr-3 rounded-circle" height="40px" width="40px" src="assets/img/client-img2.png" alt="Generic placeholder image">
+                                        <div class="media-body">
+                                            <h6 class="mt-1 mb-2">Maria Burke 
+                                                <small class="text-muted  pl-2"><i class="fa fa-clock"></i> 4 days</small>
+                                                <small class="text-muted small pull-right"><i>sponsored</i> <i class="fa fa-bookmark-o  pl-2"></i></small>
+                                            </h6>
+                                            
+                                            <div class="card shadow-sm no-border">
+                                                <div><img class="card-img-top" src="assets/img/tarred.jpeg" alt="Card image cap"></div>
+                                                <div class="card-body">
+                                                    <blockquote class="blockquote">
+                                                        <p class="mb-0">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante".</p>
+                                                    </blockquote>
+                                                </div>
+                                            </div>
+
+                                            <div class="feed-footer">
+                                                <span class="pr-3"><i class="fa fa-star"></i> 3</span>
+                                                <span class="pr-3"><i class="fa fa-comment"></i> 2</span>
+                                                <span class="pr-3"><i class="fa fa-share"></i></span>
+                                                <span class="pl-3 pull-right"><i class="fa fa-ellipsis-h"></i></span>
+
+                                                <p class="clearfix"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--/Single feed-->
+
+                            </div>
+                            <!--/Feed tab-->
+
+                            <!--Personal info tab-->
+                            <div class="tab-pane fade p-4" id="custom-profile" role="tabpanel" aria-labelledby="nav-profile">
+                                <div class="table-responsive mb-4">
+                                    <table class="table table-borderless table-striped m-0">
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row">Nom</th>
+                                                <td>{{ usr.Nom }}</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Prénom</th>
+                                                <td>{{ usr.Prenom }}</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Age</th>
+                                                <td>{{ usr.Age }}</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Email</th>
+                                                <td>{{ usr.Email }}</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Département</th>
+                                                <td>{{ usr.Departement }}</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Profession</th>
+                                                <td>{{ usr.Profession }}</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!--/Personal info tab-->
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
         {% endblock content %}
+        
 
     <!--Page Wrapper-->
     {% block script %}
